--- a/html/index.html
+++ b/html/index.html
@@ -28,12 +28,12 @@
     </header>
     <main>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background: #272727">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                  Main Menu
-                </button>
+          <nav class="navbar navbar-expand-lg navbar-dark" style="background: #272727">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              Main Menu
+            </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li><a id="navbar" class="active" href="#home">ГЛАВНАЯ</a></li>
@@ -41,7 +41,22 @@
                     <li><a id="navbar" href="#contact">ОЦЕНКИ</a></li>
                     <li><a id="navbar" href="#about">ОБ АВТОРЕ</a></li>
                   </ul>
+
                 </div>
+                <form class="form-inline"></form>
+                <a href="" class="ml-3 fa-2x">
+                  <i class="fas fa-bell" style="font-size: 0.75em;">
+                    <div class="circle"></div>
+                  </i>
+                </a> 
+                <a href="" class="ml-3 fa-2x">
+                  <i class="far fa-user-circle" style="font-size: 0.75em;"></i>
+
+                </a>      
+                <a href="" class="ml-3 fa-2x">
+                  <i class="fas fa-sign-out-alt fa-2x" style="font-size: 0.75em;"></i>
+                </a>
+              </form>
               </nav>
           </div>
               <!--START CAROUSEL-->
@@ -430,7 +445,7 @@
     <footer class="mt-4">
       <div class="container-fluid" style="background: #272727;">
         <div id="footer" class="container">
-          <p class="footer-text">Copyright © AniRaven 2020 Все права защищены</p> 
+          <p class="footer-text" style="padding-bottom: 0px;">Copyright © AniRaven 2020 Все права защищены</p> 
           <p class="footer-text">Запрещено использование материалов сайта без согласия его авторов и наличия обратной ссылки.</p>
         </div>
       </div>
